# konsave-gui

./: .gitignore  main.py  package-lock.json  package.json  requirements.txt  vite.config.js
frontend/: index.html
frontend/src/: App.jsx  ConfigEditorDialog.jsx  SettingsDialog.jsx  styles.css
gui/: dialogs.py  main_window.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: konsave.rs  mod.rs  settings.rs
