[package]
name = "konsave-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "konsave_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
zip = { version = "2", features = ["deflate"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
